--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -34,7 +34,7 @@
       type="text/css"
     />
 
-    <title>Protfolio App</title>
+    <title>Portfolio App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
