--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       type="text/css"
     />
 
-    <title>Portfolio App</title>
+    <title>Faruch Ismailov | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
